[gd_scene load_steps=15 format=3 uid="uid://dxo01u6t5rsdj"]

[ext_resource type="Texture2D" uid="uid://dn00q4i1l6ubr" path="res://Sprites/Perks/frames_normal/Frame_normal1.png" id="1_3bxqp"]
[ext_resource type="Texture2D" uid="uid://7hgbrsegcncn" path="res://Sprites/Perks/frames_active/Frame_hover1.png" id="2_lhvoa"]
[ext_resource type="Script" path="res://UI/PerkSelector/perk_button.gd" id="3_fvgbe"]
[ext_resource type="Texture2D" uid="uid://btew4o13ax5hi" path="res://Sprites/Perks/frames_normal/Frame_normal2.png" id="4_4432x"]
[ext_resource type="Texture2D" uid="uid://cglusam8h3boj" path="res://Sprites/Perks/Coin_Master.png" id="4_u433w"]
[ext_resource type="Texture2D" uid="uid://cydi65iwcfqga" path="res://Sprites/Perks/frames_normal/Frame_normal3.png" id="5_lal4l"]
[ext_resource type="Texture2D" uid="uid://nqyv5ld2hj3e" path="res://Sprites/Perks/frames_normal/Frame_normal4.png" id="6_34ffw"]
[ext_resource type="Texture2D" uid="uid://cj8q0tlapfice" path="res://Sprites/Perks/frames_normal/Frame_normal5.png" id="7_n048j"]
[ext_resource type="Texture2D" uid="uid://cuevsewatwvim" path="res://Sprites/Perks/frames_normal/Frame_normal6.png" id="8_ma2gx"]
[ext_resource type="Texture2D" uid="uid://bbch7hyq1f6mo" path="res://Sprites/Perks/frames_active/Frame_hover2.png" id="9_bmb4h"]
[ext_resource type="Texture2D" uid="uid://bbe2pdpkhm16a" path="res://Sprites/Perks/frames_active/Frame_hover3.png" id="10_805gk"]
[ext_resource type="Texture2D" uid="uid://dmjaqdue4kpr2" path="res://Sprites/Perks/frames_active/Frame_hover4.png" id="11_fyk3h"]
[ext_resource type="Texture2D" uid="uid://scvureb7vxov" path="res://Sprites/Perks/frames_active/Frame_hover5.png" id="12_aj4s5"]
[ext_resource type="Texture2D" uid="uid://habunloysb67" path="res://Sprites/Perks/frames_active/Frame_hover6.png" id="13_iak1a"]

[node name="PerkButton" type="TextureButton"]
offset_right = 32.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
texture_normal = ExtResource("1_3bxqp")
texture_hover = ExtResource("2_lhvoa")
texture_focused = ExtResource("2_lhvoa")
stretch_mode = 5
script = ExtResource("3_fvgbe")
normal_textrues = Array[Texture2D]([ExtResource("1_3bxqp"), ExtResource("4_4432x"), ExtResource("5_lal4l"), ExtResource("6_34ffw"), ExtResource("7_n048j"), ExtResource("8_ma2gx")])
focus_textrues = Array[Texture2D]([ExtResource("2_lhvoa"), ExtResource("9_bmb4h"), ExtResource("10_805gk"), ExtResource("11_fyk3h"), ExtResource("12_aj4s5"), ExtResource("13_iak1a")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="perk_image" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_u433w")
stretch_mode = 5

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="focus_entered" from="." to="." method="send_change_description"]
[connection signal="mouse_entered" from="." to="." method="send_change_description"]
